[package]
name = "capntls"
version = "1.0.1"
authors = ["Ian P. Cooke <ipc@informatic.io>"]
build = "build.rs"

[build-dependencies]
capnpc = "^0.8"

[dependencies]
futures = "^0.1"
tokio-core = "^0.1"
tokio-io = "^0.1"
native-tls = "^0.1"
tokio-tls = "^0.1"
capnp = "^0.8"
capnp-rpc = "^0.8"

[replace]
"capnp-rpc:0.8.2" = { git = "https://github.com/capnproto/capnp-rpc-rust.git" }
